Added new styles and refactored code

--- a/app/index.html
+++ b/app/index.html
@@ -28,27 +28,28 @@
 
 		<section class="people-of-interest">
 			<h2>People of interest</h2>
-			<!-- People articles go here -->
 			<div class="people-of-interest-inner">
-
+				<!-- People go here -->
 			</div>
 		</section>
 
-		<div id="modal" class="modal-bg">
+		<section id="modal" class="modal-bg">
+			<a href="#" title="Close" class="close">X</a>
 			<div class="dialog">
-				<a href="#" title="Close" class="close">X</a>
 				<article class="person-dialog">
-						<img src="" alt=""/>
-						<div>
-							<p></p>
-							<span></span>
-						</div>
+					<img src="" alt=""/>
+					<div>
+						<p></p>
+						<span></span>
+					</div>
 				</article>
+				<h3>Logged interactions</h3>
 				<div class="logs">
+
 					<!-- logs go here -->
 				</div>
 			</div>
-		</div>
+		</section>
 	</main>
 
     <!-- build:js scripts/vendor.js -->
